--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 </head>
 <body>
     <div class="container">
-        <div class="row mb-3 mt-3 justify-content-md-center">
+        <div class="">
             <div id="user-name"></div>
-            <button id="call" class="btn btn-primary col-1">Call!</button>
-            <button id="hangup" class="col-1" class="btn btn-primary">Hangup</button>
-            <div id="answer" class="col"></div>
+            <button id="call">Call!</button>
+            <!-- <button id="hangup">Hangup</button> -->
+            <div id="answer"></div>
         </div>
         <div id="videos">
             <div id="video-wrapper">
